--- a/src/server/projects/add/views/index.njk
+++ b/src/server/projects/add/views/index.njk
@@ -86,5 +86,6 @@
     {{ govukButton({
       text: "Add project"
     }) }}
+    <a href="/" class="govuk-button govuk-button--secondary" role="button">Cancel</a>
   </form>
 {% endblock %} 
