--- a/src/server/professions/detail.njk
+++ b/src/server/professions/detail.njk
@@ -82,11 +82,13 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h2 class="govuk-heading-m">Standards by Project</h2>
+      {# Sort standards by number (lowest to highest) #}
+      {% set sortedStandards = standards | sort(attribute='number') %}
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
             <th class="govuk-table__header">Project</th>
-            {% for standard in standards %}
+            {% for standard in sortedStandards %}
               <th class="govuk-table__header">
                 {% if standard.number %}
                   {{ standard.number }}: {{ standard.name }}
@@ -103,7 +105,7 @@
               <td class="govuk-table__cell">
                 <a href="/projects/{{ project.id }}" class="govuk-link">{{ project.name }}</a>
               </td>
-              {% for standard in standards %}
+              {% for standard in sortedStandards %}
                 {% set cell = matrix[standard.id][project.id] %}
                 <td class="govuk-table__cell">
                   {% if cell.rag == 'TBC' %}
