--- a/src/server/projects/add/views/index.njk
+++ b/src/server/projects/add/views/index.njk
@@ -18,6 +18,12 @@
     }) }}
   {% endif %}
 
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-full">
+      <h1 class="govuk-heading-xl">Add new project</h1>
+    </div>
+  </div>
+
   <form method="POST" novalidate>
     {{ govukInput({
       label: {
