--- a/src/server/projects/manage/views/select.njk
+++ b/src/server/projects/manage/views/select.njk
@@ -13,8 +13,7 @@
         href: "/"
       },
       {
-        text: project.name,
-        href: "/projects/" + project.id
+        text: project.name
       },
       {
         text: "Manage project"
@@ -25,7 +24,7 @@
 
 {% block content %}
   <h1 class="govuk-heading-xl">Manage Project</h1>
-  <p class="govuk-body-l">{{ project.name }}</p>
+  <h2 class="govuk-heading-l govuk-!-margin-bottom-6">{{ project.name }}</h2>
   
   {% if errorMessage %}
     {{ govukErrorSummary({
