fix: accessibility and babel bump

--- a/src/server/projects/detail/views/archive-project-history.njk
+++ b/src/server/projects/detail/views/archive-project-history.njk
@@ -13,8 +13,7 @@
         href: "/"
       },
       {
-        text: project.name,
-        href: "/projects/" + project.id
+        text: project.name
       },
       {
         text: "Archive Project Update"
