fix: defcood and error page

--- a/src/server/projects/manage/views/details.njk
+++ b/src/server/projects/manage/views/details.njk
@@ -78,8 +78,7 @@
       id: "defCode",
       name: "defCode",
       value: values.defCode or project.defCode,
-      errorMessage: errors.defCode,
-      required: true
+      errorMessage: errors.defCode
     }) }}
 
     <div class="govuk-button-group">
