--- a/src/server/projects/manage/views/details.njk
+++ b/src/server/projects/manage/views/details.njk
@@ -78,7 +78,8 @@
       id: "defCode",
       name: "defCode",
       value: values.defCode or project.defCode,
-      errorMessage: errors.defCode
+      errorMessage: errors.defCode,
+      required: false
     }) }}
 
     <div class="govuk-button-group">
