--- a/src/server/professions/detail.njk
+++ b/src/server/professions/detail.njk
@@ -5,6 +5,7 @@
 {% from "govuk/components/summary-list/macro.njk" import govukSummaryList %}
 {% from "govuk/components/table/macro.njk" import govukTable %}
 {% from "govuk/components/back-link/macro.njk" import govukBackLink %}
+{% from "govuk/components/details/macro.njk" import govukDetails %}
 
 {% macro renderStatusTag(status) %}
   {% if status == 'AMBER_RED' %}
@@ -84,8 +85,26 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-full">
       <h2 class="govuk-heading-m">Standards by Project</h2>
+      
       {# Sort standards by number (lowest to highest) #}
       {% set sortedStandards = standards | sort(attribute='number') %}
+      
+      {# Help with Service Standard names #}
+      {% set standardsListHtml %}
+        <ul class="govuk-list">
+          {% for standard in sortedStandards %}
+            <li>
+              <strong>{{ standard.number }}:</strong> {{ standard.name }}
+            </li>
+          {% endfor %}
+        </ul>
+      {% endset %}
+      
+      {{ govukDetails({
+        summaryText: "Help with Service Standard names",
+        html: standardsListHtml
+      }) }}
+      
       <table class="govuk-table">
         <thead class="govuk-table__head">
           <tr class="govuk-table__row">
@@ -93,7 +112,7 @@
             {% for standard in sortedStandards %}
               <th class="govuk-table__header">
                 {% if standard.number %}
-                  {{ standard.number }}: {{ standard.name }}
+                  {{ standard.number }}
                 {% else %}
                   {{ standard.name }}
                 {% endif %}
